# vesselFM

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: cli_usage.sh  inference_dask_example.py
tests/: test_cli.py  test_inference_dask.py
vesselfm/: cli.py
vesselfm/seg/: README.md  inference.py  inference_dask.py
vesselfm/seg/utils/: evaluation.py
