[project]
authors = [{name = "Ali R. Khan", email = "alik@robarts.ca"}]
dependencies = []
name = "vesselFM"
requires-python = ">= 3.11"
version = "0.1.0"
scripts = { vesselfm-infer = "vesselfm.cli:main" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
vesselfm = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["vesselfm"]


[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"
pytorch-gpu = "*"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.feature.dev.dependencies]
pytest = "*"

[tool.pixi.environments]
cpu = ["cpu"]
dev = ["cpu","dev"]
default = ["gpu"]

[tool.pixi.dependencies]
monai = ">=1.5.2,<2"
hydra-core = ">=1.3.2,<2"
scikit-image = ">=0.26.0,<0.27"
scikit-learn = ">=1.8.0,<2"
simpleitk = ">=2.4.0,<3"
tqdm = ">=4.67.2,<5"
lightning = ">=2.6.0,<3"
wandb = ">=0.24.1,<0.25"
numpy = ">=2.4.2,<3"
matplotlib = ">=3.10.8,<4"
tensorboard = ">=2.20.0,<3"
huggingface_hub = ">=1.3.7,<2"
h5py = ">=3.13.0,<4"
tifffile = ">=2024.12.12,<2025"
pylibtiff = ">=0.7.0,<0.8"
nibabel = ">=5.3.2,<6"
gpustat = ">=1.1.1,<2"
omegaconf = ">=2.3.0,<3"
dask = ">=2024.12.1,<2025"
